?<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_close">Beenden</string>
    <string name="action_filter">Filter</string>
    <string name="action_filteroptions">Filteroptionen</string>
    <string name="action_hs">HS-Gebäude</string>
    <string name="action_bars">Bars</string>
    <string name="action_main">Hauptseite</string>
    <string name="action_focus">Fokus</string>
    <string name="action_list">Liste</string>
    <string name="action_support">Hilfe</string>
    <string name="action_select_quiz">Quiz auswählen</string>
    <string name="app_name">Studi-App Köthen</string>
    <string name="hello_world">Hello world!</string>
    <string name="campus">Campus</string>
    <string name="koethen">Köthen</string>
    <string name="karte">Karte</string>
    <string name="entdeckertour">Entdeckertour</string>
    <string name="main_dialog_headline">Willkommen</string>
    <string name="main_dialog_message">Herzlich Willkommen in unserer App. Diese soll ein Campus-Führer für Köthen darstellen\nWir hoffen, dass ihr damit etwas anfangen könnt und wünschen euch viel Spass.</string>
    <string name="title_activity_expandable_list">ExpandableListActivity</string>
    <string name="detail_description">Es wurde kein gültiges Gebäude zur Anzeige ausgewählt!</string>
    <string name="detail_name_headline">Name:</string>
    <string name="detail_adresse_headline">Adresse:</string>
    <string name="detail_phonenumber_headline">Telefonnummer:</string>
    <string name="detail_buildingnumber_headline">Gebäudenummer:</string>
    <string name="detail_facultynumber_headline">Fachbereichsnummer:</string>
    <string name="detail_homepage_headline">Homepage:</string>
    <string name="detail_description_headline">Beschreibung:</string>
    <string name="detail_mapbutton">Auf Karte anzeigen!</string>
    <string name="detail_button_mapview">Auf Karte anzeigen</string>
    <string name="image_errormsg">Das Bild konnte nicht geladen werden!</string>
    <string name="help_headline_support">Einleitung:</string>
    <string name="help_headline_map">Campus Map:</string>
    <string name="help_headline_marker">-Bedeutung der Marker</string>
    <string name="help_headline_filter">-Benutzung des Filters</string>
    <string name="help_headline_navigation">-Tipps zur Navigation</string>
    <string name="help_headline_quiz">Campus Quiz:</string>
    <string name="help_headline_koethen">Übersicht Köthen:</string>
    <string name="help_headline_campus">Alles zum Campus:</string>
    <string name="filter_text">Mithilfe des Filters, welcher im oberen Optionsmenü zu finden ist,\nkönnen die verschiedenen Gebäudegruppen ein- oder ausgeblendet werden.
                               Diese Funktion soll dir die Übersicht auf der Köthen Map erleichtern und dabei helfen schneller ein bestimmtes Objekt zu finden.</string>
    <string name="marker_text">Die Marker stellen verschiedene Gebäudegruppen dar. Jeder Marker auf der Karte steht für ein Gebäude oder einen wichtigen Ort.Um nähere Informationen über
                               einen Punkt heraus zu finden,muss man einfach auf den entsprechenden Marker drücken und es öffnet sich ein kleines Informationsfenster\n\nWenn sich mehrere Gebäude auf einem Fleck befinden, können diese durch mehrmaliges Drücken auf den Marker durchgeschalten werden.</string>
    <string name="navigation_text">Zur besseren Navigation kann die eigene Position auf der Karte angezeigt werden. Hierfür ist es jedoch erforderlich, die Standortbestimmung in den Smartphone-Einstellungen zu aktivieren.
        						Über den Button in der oberen rechten Ecke der Karte kannst du dann die Karte auf deine Position zentrieren.
								Im Optionsmenü gibt es neben dem Filtereinstellungen auch die Möglichkeit, die Position der Karte und deren Zoomstufe zurück auf den Anfangswert zu setzen.</string>
    <string name="support_text">Willkommen in dem Hilfe-Bereich der Studi App Köthen. Wir haben uns Mühe gegeben alles einfach und intuitiv zu gestalten ,aber da du hier bist um
                                weitere Sachen zu erfahren, haben wir verschiedene Sachen gelistet.</string>
    <string name="map_text">Zu wissen ist ,dass manche Symbole auf der Karte bis jetzt mehrere Bedeutungen haben und diese durch mehrfaches Klicken wechseln.
                            \nBerührt Ihr den Infokasten oberhalb des Markers wird eine Seite mit wichtigen Informationen geöffnet.</string>
    <string name="quiz_text">Das Quiz soll dich animieren eine Runde durch Köthen und über deinen neuen Campus zu gehen.\nDabei werden dir Gebäude-spezifische Fragen gestellt
                             und du kannst dein Wissen über Köthen unter Beweis stellen. Viel Spaß damit und solltest du einmal keine Lust mehr haben, wird es automatisch an der aktuellen Position gespeichert.
							 \nSo kannst du jederzeit weiter spielen, wenn du Lust hast.</string>
    <string name="koethen_text">Unter dem Menüpunkt Köthen findest du eine Liste mit wichtigen und interessanten Orten hier in Köthen. Darunter befinden sich Ämter, Freizeiteinrichtungen und mehr. Wähle einen Eintrag aus, um mehr zu erfahren.</string>
    <string name="campus_text">Unter Campus findest du alles Wichtige zur Hochschule, wie zum Beispiel Infos zu den Fachbereichen, Wohnheimen und zur Verwaltung.</string>
    <string name="quiz_startmsg">
        Willkommen bei unserem Campusführer!
        \n
        \nwie der Name schon sagt, ist die Intention dieses Apppunktes, euch euren Campus etwas näher zu bringen und euch darüber zu führen.
        \n
        \nIn der Actionbar existiert ein Symbol, das mit einem Fragezeichen versehen ist. Bei einem Klick auf dieses, könnt ihr das zu bearbeitende Quiz auswählen.
        \nAllerdings existiert zurzeit nur ein einziges Quiz, auf Grund dessen habt ihr nicht wirklich viel Spielraum! ;)
        \nWenn mehrere Quizze existieren würden, sollte man über dieses Symbol jederzeit zwischen diesen wechseln können.
        \n
        \nDas Quiz kann jederzeit verlassen werden und fährt beim nächsten Start von der letzten Position fort.
        \n
        \nDes Weiteren existiert ein Glühbirnensymbol, welches euch nützliche Hinweise zum Lösen der Aufgaben gibt.
        \n
        \nDen Rest werdet ihr wohl alleine rausfinden, damit ich jetzt nicht noch mehr quasseln muss.
        \n
        \nViel Spaß beim Kennenlernen eures Campuses!
    </string>
    <string name="quiz_analysis_verybad">
        Du solltest doch deinen Campus begehen und dir alles anschauen und nicht nur wild rumklicken.
        \nHoffentlich wird es nächstes mal besser. Du hast nur =p Prozent richtig beantwortet. Was =c/=q richtig beantwortete Fragen entspricht.
    </string>
    <string name="quiz_analysis_bad">
        Naja, das kannst du auch besser. Streng dich nächstes mal besser an.
        \nDu hast =p Prozent des Quizes richtig beantwortet. Das entspricht =c/=q Fragen.
    </string>
    <string name="quiz_analysis_medium">
        Kopf hoch, begehe den Campus einfach noch einmal und beim nächsten Mal klappt es bestimmt besser.
        \nImmerhin hast du schon =p Prozent bzw =c/=q Fragen richtig beantwortet.
    </string>
    <string name="quiz_analysis_good">
        Gar nicht mal so schlecht. Du kennst immerhin schon mehr als die Hälfte von deinem Campus und hast
        =p Prozent bzw =c/=q Fragen richtig beantwortet.
    </string>
    <string name="quiz_analysis_verygood">
        Grossartig! Das muss dir erstmal einer nachmachen. Du hast fast alle Fragen richtig beanwortet.
        \nUm genau zu sein =p Prozent bzw =c/=q Fragen. Weiter so!
    </string>
    <string name="quiz_analysis_perfekt">
        Alter Schwede! Du bist wohl wirklich mit dem Quiz durch Köthen gelaufen?
        \nDu hast anscheinend alle Fragen (=p Prozent) richtig beantwortet. Dann kann im Studium doch gar nichts mehr schief laufen.
    </string>
    <string name="quiz_button_startbutton">Quiz starten!</string>
    <string name="quiz_button_nextquestion">Zur nächsten Frage!</string>
    <string name="quiz_button_exitquiz">Quiz beenden</string>
    <string name="quiz_context_choosequiz">Quiz-Auswahl</string>

   	<string name="detail_person_state">Anrede:</string>
  	<string name="detail_person_name">Vorname:</string>
   	<string name="detail_person_surname">Nachname:</string>
 	<string name="detail_person_specialfield">Fachbereich:</string>
   	<string name="detail_person_street">Strasse:</string>
	<string name="detail_person_buildingnumber">Hausnummer:</string>    
	<string name="detail_person_postalcode">PLZ:</string>
	<string name="detail_person_city">Ort:</string>
	<string name="detail_person_buildings">Gebäudenummer:</string>
    <string name="detail_person_builddescribtion">Gebäude:</string>
	<string name="detail_person_room">Büro:</string>
	<string name="detail_person_description">Beschreibung:</string>

	<string name="detail_person_profession">Fachgebiet:</string>
	<string name="detail_person_modules">Bietet folgende Module an:</string>
	<string name="detail_person_responsibility">Ist zuständig für:</string>

	<string name="detail_person_talktime">Sprechzeiten:</string>	
	<string name="detail_person_phone">Telefonnummer:</string>
	<string name="detail_person_email">E-Mail:</string>
	<string name="detail_person_url">Link:</string>
	
	
	
</resources>
