<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_main"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_main"/>
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_close"/>
    <item
        android:id="@+id/action_select_quiz"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/questionmark_quizselection"
        android:title="@string/action_select_quiz" />

</menu>
